tests/ui/higher-ranked/trait-bounds/normalize-under-binder/issue-71955.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:45:5
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |         --------------------------------------- due to a where-clause on `foo`...
...
LL |     foo(bar, "string", |s| s.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't satisfy where-clause
   |
   = note: ...closure with signature `for<'a> fn(&'a &'2 str) -> bool` must implement `FnOnce<(&&'1 str,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&&'2 str,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:45:5
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |                                            ---- due to a where-clause on `foo`...
...
LL |     foo(bar, "string", |s| s.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't satisfy where-clause
   |
   = note: ...closure with signature `for<'a> fn(&'a &'2 str) -> bool` must implement `FnOnce<(&&'1 str,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&&'2 str,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:48:5
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |         --------------------------------------- due to a where-clause on `foo`...
...
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't satisfy where-clause
   |
   = note: ...closure with signature `for<'a> fn(&'a Wrapper<'2>) -> bool` must implement `FnOnce<(&Wrapper<'1>,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&Wrapper<'2>,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:48:5
   |
LL |     F2: FnOnce(&<F1 as Parser>::Output) -> bool
   |                                            ---- due to a where-clause on `foo`...
...
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't satisfy where-clause
   |
   = note: ...closure with signature `for<'a> fn(&'a Wrapper<'2>) -> bool` must implement `FnOnce<(&Wrapper<'1>,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&Wrapper<'2>,)>`, for some specific lifetime `'2`

error: aborting due to 4 previous errors

